Prevent calc text overflow

--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ body {
     align-items: center;
 }
 
+#display-para {
+    overflow: hidden;
+}
+
 .display {
     height: 95px;
     width: 100%;
